erDiagram
    Usuarios {
        int IdUsuario PK
        string NombreUsuario
        string ApellidoUsuario
        string RolUsuario
    }

    TiposElemento {
        int IdTipoElemento PK
        string NombreTipoElemento
    }

    SistemasArmas {
        int IdSistemaArmas PK
        string CodigoSistemaArmas
        string ModeloSistemaArmas
    }

    CatalogoMateriales {
        string NNE PK
        string NumeroReferenciaMaterial
        string DesignacionMaterial
        string ATAMaterial
        int IdTipoElemento FK
        int IdUsuario FK
    }

    MaterialesSistemasArmas {
        int IdSistemaArmas PK, FK
        string NNE PK, FK
    }

    Ubicaciones {
        int IdUbicacion PK
        string DepositoUbicacion
        string SectorUbicacion
        string MapaHighlightUbicacion
    }

    InventarioFisico {
        int IdItem PK
        string NNE FK
        string NumeroSerieItem
        date FechaVencimientoItem
        string ObservacionesItem
        string TamanoItem
        int IdUbicacion FK
    }

    EstadosElemento {
        int IdEstadoElemento PK
        string CodigoEstadoElemento
        string DescripcionEstadoElemento
    }

    Tarjetas {
        int IdTarjeta PK
        int IdItem FK
        int IdEstadoElemento FK
        string CodigoTrazabilidadTarjeta
        string NumeroTarjeta
        string OrdenTrabajoTarjeta
        date FechaEmisionTarjeta
        string CausasTarjeta
        string InspectorTarjeta
        bit ActivaTarjeta
    }

    MotivosSalida {
        int IdMotivoSalida PK
        string CodigoMotivoSalida
        string DescripcionMotivoSalida
    }

    Salidas {
        int IdSalida PK
        int IdItem FK
        int IdMotivoSalida FK
        string DestinoSalida
        datetime FechaSalida
        date FechaPrevistaRetornoSalida
        datetime FechaRetornoSalida
        string RetiradoPorSalida
        string ObservacionesSalida
    }

    MovimientosInventario {
        int IdMovimiento PK
        int IdItem FK
        int IdUbicacion FK
        datetime FechaRegistroMovimiento
        string AccionMovimiento
        int IdUsuarioRegistra FK
        string DetalleMovimiento
    }

    TiposElemento ||--o{ CatalogoMateriales : clasifica
    Usuarios |o--o{ CatalogoMateriales : carga
    SistemasArmas ||--o{ MaterialesSistemasArmas : utiliza
    CatalogoMateriales ||--o{ MaterialesSistemasArmas : compatible
    CatalogoMateriales ||--o{ InventarioFisico : instancia
    Ubicaciones |o--o{ InventarioFisico : almacena
    InventarioFisico ||--o{ Tarjetas : "lleva atada"
    EstadosElemento ||--o{ Tarjetas : condiciona
    InventarioFisico ||--o{ MovimientosInventario : afecta
    Ubicaciones |o--o{ MovimientosInventario : registra
    Usuarios |o--o{ MovimientosInventario : registra
    InventarioFisico ||--o{ Salidas : "se retira en"
    MotivosSalida ||--o{ Salidas : justifica
